--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: custom_pin_keyboard
-description: The best flutter package that gives you a custom keyboard for one time password widgets, transaction pin widgets and simple login widgets. Shortcomings of other packages were taken into account!
+description: The best flutter package that gives you a custom keyboard for one time password widgets, transaction pin widgets and simple login widgets
 homepage: https://pub.dev/packages/custom_pin_keyboard
 repository: https://github.com/arrrtem22/custom_pin_keyboard/
 issue_tracker: https://github.com/arrrtem22/custom_pin_keyboard/issues
-version: 0.0.2
+version: 0.0.3
 
 dependencies:
   flutter:
